Fixed 1 pixel gap in header text between browsers

--- a/html/css/dfc.css
+++ b/html/css/dfc.css
@@ -23,7 +23,6 @@ h2 {
 
 header {
 	position: relative;
-	z-index: 1;
 	height: 130px;
 	margin: 0 0 0 20px;
 	padding-left: 10px;
@@ -37,12 +36,10 @@ header img {
 header h1 {
 	color: #FF7124;
 	position: absolute;
-	bottom: -2px;
-	font-size: 110px;
+	font-size: 112px;
 	font-family: 'Squada One', Arial, Helvetica, sans-serif;
-	margin: 0px 0 0 150px;
-	line-height: 70%;
-	overflow: hidden;
+	margin: 55px 0 0 150px;
+	line-height: 66.5%;
 }
 
 .current-page{
